@@ -7,78 +7,83 @@ import com.github.javaparser.symbolsolver.resolution.typesolvers.CombinedTypeSol
 import com.github.javaparser.symbolsolver.resolution.typesolvers.ReflectionTypeSolver;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.AccessMode;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 
+import static com.google.common.collect.ImmutableMap.*;
 import static java.nio.file.AccessMode.*;
+import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class SourceVisitorTest {
-    private static final List<String> enumValues = stream(java.nio.file.AccessMode.class.getEnumConstants()).map(Enum::name).toList();
+    private static final List<String> enumValues = stream(java.nio.file.AccessMode.class.getEnumConstants()).map(Enum::name).collect(toList());
     private static final String root = System.getProperty("user.dir");
 
     @Test
     void t1() throws IOException {
-        System.out.println(System.getProperty("user.dir"));
-        assertEquals(Map.of(), helper(("src/functionalTest/java/fake/ClassValue1.java")));
+        assertEquals(of(), helper(("src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue1.java")));
     }
 
     @Test
     void t2() throws IOException {
 
-        assertEquals(Map.of(
-                EXECUTE, results("7:src/functionalTest/java/fake/ClassValue2.java")
-        ), helper(("src/functionalTest/java/fake/ClassValue2.java")));
+        assertEquals(of(
+                EXECUTE, rows(data(EXECUTE, 7,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue2.java"))
+        ), helper(("src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue2.java")));
     }
 
     @Test
     void t3() throws IOException {
 
-        assertEquals(Map.of(
-                EXECUTE, results("7:src/functionalTest/java/fake/ClassValue3.java")
-        ), helper(("src/functionalTest/java/fake/ClassValue3.java")));
+        assertEquals(of(
+                EXECUTE, rows(data(EXECUTE, 7,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue3.java"))
+        ), helper(("src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue3.java")));
     }
 
     @Test
     void t4() throws IOException {
 
-        assertEquals(Map.of(
-                EXECUTE, results("7:src/functionalTest/java/fake/ClassValue4.java")
-        ), helper(("src/functionalTest/java/fake/ClassValue4.java")));
+        assertEquals(of(
+                EXECUTE, rows(data(EXECUTE, 7,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue4.java"))
+        ), helper(("src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue4.java")));
     }
 
     @Test
     void t5() throws IOException {
 
-        assertEquals(Map.of(
-                READ, results("10:src/functionalTest/java/fake/ClassValue5.java"),
-                EXECUTE, results(
-                        "12:src/functionalTest/java/fake/ClassValue5.java",
-                        "13:src/functionalTest/java/fake/ClassValue5.java"
+        assertEquals(of(
+                READ, rows(
+                        data(READ, 10,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue5.java")
                 ),
-                WRITE, results(
-                        "14:src/functionalTest/java/fake/ClassValue5.java"
+                EXECUTE, rows(
+                        data(EXECUTE, 12,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue5.java"),
+                        data(EXECUTE, 13,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue5.java")
+                ),
+                WRITE, rows(
+                        data(WRITE,14,"src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue5.java")
                 )
-        ), helper(("src/functionalTest/java/fake/ClassValue5.java")));
+        ), helper(("src/functionalTest/resources/test1/input/src/main/java/fake/ClassValue5.java")));
     }
 
-    static List<String> results(String... expected) {
-        return stream(expected).map(v -> {
-            String[] parts = v.split(":");
-            parts[1] = root + "/" + parts[1];
-            return String.join(":", parts);
-        }).toList();
+    static List<SourceVisitor.Data> rows(SourceVisitor.Data... rows){
+        return asList(rows);
     }
 
-    static Map<Enum<?>, List<String>> helper(String path) throws IOException {
-        return helper(Path.of(root + "/" + path));
+    static SourceVisitor.Data data(Enum<?> key, int line, String path){
+        return new SourceVisitor.Data(key, line, new File(root + "/" + path).toPath());
     }
 
-    static Map<Enum<?>, List<String>> helper(Path path) throws IOException {
+    static Map<Enum<?>, List<SourceVisitor.Data>> helper(String path) throws IOException {
+        return helper(new File(root + "/" + path).toPath());
+    }
+
+    static Map<Enum<?>, List<SourceVisitor.Data>> helper(Path path) throws IOException {
         CombinedTypeSolver typeSolver = new CombinedTypeSolver();
         typeSolver.add(new ReflectionTypeSolver());
 
